cluster-components/linkerd/linkerd-web.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linkerd-web
  namespace: linkerd
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: Linkerd
    app.kubernetes.io/version: stable-2.9.3
    linkerd.io/control-plane-component: web
    linkerd.io/control-plane-ns: linkerd
spec:
  template:
    spec:
      containers:
        - name: web
          image: 'ghcr.io/linkerd/web:stable-2.9.3'
          args:
            - '-api-addr=linkerd-controller-api.linkerd.svc.cluster.local:8085'
            - '-cluster-domain=cluster.local'
            - '-grafana-addr=linkerd-grafana.linkerd.svc.cluster.local:3000'
            - '-controller-namespace=linkerd'
            - '-log-level=info'
            - >-
              -enforced-host=^(localhost|127\.0\.0\.1|.*\.local|linkerd-web\.linkerd\.svc\.cluster\.local|linkerd-web\.linkerd\.svc|\[::1\])(:\d+)?$
