cluster-components/linkerd/emojivoto-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto
  namespace: emojivoto
spec:
  rules:
  - host: emojivoto.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
---
