cluster-components/linkerd/grafana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-grafana
  namespace: linkerd
spec:
  rules:
  - host: linkerd-grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkerd-grafana
            port:
              number: 3000
---
