cluster-components/linkerd/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-web
  namespace: linkerd
spec:
  rules:
  - host: linkerd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkerd-web
            port:
              number: 8084
---
